--- a/ToeicWeb/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ToeicWeb/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -561,6 +561,7 @@
 	<script src="//cdn.datatables.net/2.1.5/js/dataTables.min.js" asp-append-version="true"></script>
 
 	<script src="~/adminn/js/script.js"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
 	@await RenderSectionAsync("Scripts", required: false)
 
