--- a/ToeicWeb/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ToeicWeb/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -292,7 +292,7 @@
 							</a>
 							<!--end:Menu item-->
 							<!--begin:Menu item-->
-							<div data-kt-menu-trigger="click" class="menu-item here show menu-accordion">
+							<a asp-area="Admin" asp-controller="BTdoc" asp-action="Index" class="menu-item here show menu-accordion">
 								<!--begin:Menu link-->
 								<span class="menu-link">
 									<span class="menu-icon">
@@ -304,47 +304,17 @@
 										</i>
 									</span>
 									<span class="menu-title">Quản lý bài tập đọc</span>
-									<span class="menu-arrow"></span>
 								</span>
 								<!--end:Menu link-->
-								<!--begin:Menu sub-->
-								<div class="menu-sub menu-sub-accordion">
-									<!--begin:Menu item-->
-									<div class="menu-item">
-										<!--begin:Menu link-->
-										<a class="menu-link" asp-area="Admin" asp-controller="MaBTdoc" asp-action="Index">
-											<span class="menu-bullet">
-												<span class="bullet bullet-dot"></span>
-											</span>
-											<span class="menu-title">Quản lý mã bài đọc</span>
-										</a>
-										<!--end:Menu link-->
-									</div>
-									<!--end:Menu item-->
-									<!--begin:Menu item-->
-									<div class="menu-item">
-										<!--begin:Menu link-->
-										<a class="menu-link" asp-area="Admin" asp-controller="CauhoiBTdoc" asp-action="Index">
-											<span class="menu-bullet">
-												<span class="bullet bullet-dot"></span>
-											</span>
-											<span class="menu-title">
-												Quản lý bài đọc
-											</span>
-										</a>
-										<!--end:Menu link-->
-									</div>
-									<!--end:Menu item-->
-								</div>
-								<!--end:Menu sub-->
-							</div>
+								
+							</a>
 							<!--end:Menu item-->
 							<!--begin:Menu item-->
-							<div data-kt-menu-trigger="click" class="menu-item here show menu-accordion">
+							<a data-kt-menu-trigger="click" class="menu-item here show menu-accordion">
 								<!--begin:Menu link-->
 								<span class="menu-link">
 									<span class="menu-icon">
-										<i class="bi bi-headset" style="font-size: 18px"></i>
+										<i class="bi bi-headset" style="font-size: 18px">
 										<span class="path1"></span>
 										<span class="path2"></span>
 										<span class="path3"></span>
@@ -352,40 +322,10 @@
 										</i>
 									</span>
 									<span class="menu-title">Quản lý bài tập nge</span>
-									<span class="menu-arrow"></span>
 								</span>
 								<!--end:Menu link-->
-								<!--begin:Menu sub-->
-								<div class="menu-sub menu-sub-accordion">
-									<!--begin:Menu item-->
-									<div class="menu-item">
-										<!--begin:Menu link-->
-										<a class="menu-link" href="../dist/index.html">
-											<span class="menu-bullet">
-												<span class="bullet bullet-dot"></span>
-											</span>
-											<span class="menu-title">Quản lý mã bài tập</span>
-										</a>
-										<!--end:Menu link-->
-									</div>
-									<!--end:Menu item-->
-									<!--begin:Menu item-->
-									<div class="menu-item">
-										<!--begin:Menu link-->
-										<a class="menu-link">
-											<span class="menu-bullet">
-												<span class="bullet bullet-dot"></span>
-											</span>
-											<span class="menu-title">
-												Quản lý bài tập
-											</span>
-										</a>
-										<!--end:Menu link-->
-									</div>
-									<!--end:Menu item-->
-								</div>
-								<!--end:Menu sub-->
-							</div>
+								
+							</a>
 							<!--end:Menu item-->
 							<!--begin:Menu item-->
 							<div data-kt-menu-trigger="click" class="menu-item here show menu-accordion">
@@ -439,9 +379,9 @@
 							</div>
 							<!--end:Menu item-->
 							<!--begin:Menu item-->
-							<div data-kt-menu-trigger="click" class="menu-item here show menu-accordion">
+							<a asp-area="Admin" asp-controller="User" asp-action="Index" class="menu-item here show menu-accordion">
 								<!--begin:Menu link-->
-								<a class="menu-link">
+								<span class="menu-link">
 									<span class="menu-icon">
 										<i class="bi bi-person-bounding-box" style="font-size: 18px">
 											<span class="path1"></span>
@@ -451,27 +391,10 @@
 										</i>
 									</span>
 									<span class="menu-title">Quản lý tài khoản</span>
-									<span class="menu-arrow"></span>
-								</a>
+								</span>
 								<!--end:Menu link-->
-								<!--begin:Menu sub-->
-								<div class="menu-sub menu-sub-accordion">
-									<!--begin:Menu item-->
-									<div class="menu-item">
-										<!--begin:Menu link-->
-										<a class="menu-link" asp-area="Admin" asp-controller="User" asp-action="Index">
-											<span class="menu-bullet">
-												<span class="bullet bullet-dot"></span>
-											</span>
-											<span class="menu-title">Khóa và đổi vai trò</span>
-										</a>
-										<!--end:Menu link-->
-									</div>
-									<!--end:Menu item-->
-
-								</div>
-								<!--end:Menu sub-->
-							</div>
+								
+							</a>
 							<!--end:Menu item-->
 							<a asp-area="Customer" asp-controller="Home" asp-action="Index" class="menu-item here show menu-accordion">
 								<!--begin:Menu link-->
