--- a/ToeicWeb/Areas/Admin/Views/BTdoc/Index.cshtml
+++ b/ToeicWeb/Areas/Admin/Views/BTdoc/Index.cshtml
@@ -9,6 +9,7 @@
         </div>
         <hr class="mx-3" style="width:98%" />
     </div>
+
     <div class="row pt-2 ms-2">
         <div class="col-6 col-md-3">
             <button type="button" data-toggle="modal" data-target="#uploadModal" class="btn btn-primary">
@@ -16,18 +17,58 @@
             </button>
         </div>
     </div>
-   @*  <div class="card-body p-4">
+
+    <div class="card-body p-4">
         <table id="tblData" class="table table-bordered table-striped" style="width:100%">
             <thead>
                 <tr>
                     <th class="text-start">Id</th>
-                    <th>TIÊU ĐỀ BÀI TẬP ĐỌC</th>
-                    <th>PART</th>
-                    <th>Action</th>
+                    <th>TIÊU ĐỀ</th>
+                    <th class="text-start">PART</th>
+                    <th></th>
                 </tr>
             </thead>
         </table>
-    </div> *@
+    </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="BaitapdocModal">
+    <div class="modal-dialog modal-lg modal-dialog-scrollable" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="modal-title" id="modalTitle"></h3>
+            </div>
+            <div class="modal-body">
+                <input type="hidden" asp-for="Id" value="0" />
+                <div class="mb-2">
+                    <label asp-for="Tieu_de" class="d-flex align-items-center fs-5 fw-semibold mb-2">
+                        <span class="required">Tiêu đề</span>
+                    </label>
+                    <input asp-for="Tieu_de" class="form-control" />
+                    <span asp-validation-for="Tieu_de" class="text-danger"></span>
+                </div>
+
+                <div class="mb-2">
+                    <label asp-for="Part" class="d-flex align-items-center fs-5 fw-semibold mb-2">
+                        <span class="required">Part</span>
+                    </label>
+                    <select class="form-control" asp-for="Part">
+                        <option value="5">Part 5</option>
+                        <option value="6">Part 6</option>
+                        <option value="7">Part 7</option>
+                    </select>
+                    <span asp-validation-for="Part" class="text-danger"></span>
+                </div>
+
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-secondary" data-bs-dismiss="modal" onclick="HideModal();">Hủy</button>
+                <button class="btn btn-primary" type="button" id="Save" onclick="Insert();">Thêm</button>
+                <button class="btn btn-success" type="button" id="Update" onclick="Update();" style="display:none">Cập nhật</button>
+            </div>
+        </div>
+    </div>
 </div>
 
 <!-- Modal -->
@@ -43,7 +84,7 @@
                         <label asp-for="Tieu_de" class="d-flex align-items-center fs-5 fw-semibold mb-2">
                             <span class="required">Tiêu đề</span>
                         </label>
-                        <input asp-for="Tieu_de" class="form-control" required/>
+                        <input asp-for="Tieu_de" class="form-control" required />
                         <span asp-validation-for="Tieu_de" class="text-danger"></span>
                     </div>
 
@@ -73,14 +114,13 @@
                 </form>
 
             </div>
-           
+
         </div>
     </div>
 </div>
 
 
+
 @section Scripts {
-    <script src="~/adminn/js/cauhoibtdoc.js"></script>
+    <script src="~/adminn/js/mabtdoc.js"></script>
 }
-
-
