--- a/ToeicWeb/Areas/Customer/Views/Home/Index.cshtml
+++ b/ToeicWeb/Areas/Customer/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
                         </div>
 
                         <div>
-                            <a asp-area="Customer" asp-controller="Home" asp-action="Details"
+                        <a asp-area="Customer" asp-controller="Luyentap" asp-action="Part5"
                                
                                class="btn btn-primary bg-gradient  form-control">
                                 Luyện tập
@@ -134,8 +134,7 @@
                     </div>
 
                     <div>
-                        <a asp-action="Details"
-                           asp-route-productId="Id"
+                    <a asp-area="Customer" asp-controller="Luyentap" asp-action="Part5"
                            class="btn btn-primary bg-gradient  form-control">
                             Luyện tập
                         </a>
