--- a/ToeicWeb/Areas/Customer/Views/_ViewImports.cshtml
+++ b/ToeicWeb/Areas/Customer/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using ToeicWeb
 @using ToeicWeb.Models
 @using ToeicWeb.Utility
+@using ToeicWeb.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
