--- a/ToeicWeb/Views/Shared/_NavbarLuyentap.cshtml
+++ b/ToeicWeb/Views/Shared/_NavbarLuyentap.cshtml
@@ -6,7 +6,7 @@
                     <a class="nav-link" href="javascript:history.back()">
                         <i class="bi bi-chevron-left pe-sm-3"></i>
                     </a>
-                    <span class="mt-sm-1">Back</span>
+                    <span class="mt-sm-1">Thoát</span>
                 </li>
             </ul>
         </div>
