--- a/ToeicWeb/Areas/Customer/Views/Luyentap/PracticePart5.cshtml
+++ b/ToeicWeb/Areas/Customer/Views/Luyentap/PracticePart5.cshtml
@@ -37,7 +37,7 @@
                         @for (int j = 0; j < options.Length; j++)
                         {
                             <div>
-                                <input type="radio" name="cauHoi_@Model.CauHoiList[i].Id" value="@options[j].Text" />
+                                <input type="radio" name="cauHoi_@Model.CauHoiList[i].Id" value="@options[j].Text" onchange="markAsSelected(@Model.CauHoiList[i].Id)" />
                                 <label>@options[j].Letter. @options[j].Text</label>
                             </div>
                         }
@@ -61,7 +61,7 @@
     </div>
 
     <!-- Nút nộp bài -->
-    <button type="submit" form="tracNghiemForm" class="btn btn-primary mb-3 text-light rounded-3">NỘP BÀI</button>
+    <button type="button" class="btn btn-primary mb-3 text-light rounded-3" onclick="confirmSubmission()">NỘP BÀI</button>
 
     <p style="color: orange; font-size: 12px;">
         Chú ý: bạn có thể click vào số thứ tự câu hỏi trong bảng để đánh dấu review
@@ -125,6 +125,35 @@
     // Scroll tới câu hỏi khi nhấn vào nút
     function scrollToQuestion(questionId) {
         document.getElementById('question_' + questionId).scrollIntoView({ behavior: 'smooth' });
+    }
+
+    // nút nộp bài
+    function confirmSubmission() {
+        Swal.fire({
+            title: "Bạn có chắc muốn nộp bài?",
+            text: "Bài làm sẽ không thể thay đổi!",
+            icon: "warning",
+            showCancelButton: true,
+            confirmButtonColor: "#3085d6",
+            cancelButtonColor: "#d33",
+            confirmButtonText: "Nộp bài",
+            cancelButtonText: "Hủy"
+        }).then((result) => {
+            if (result.isConfirmed) {
+                // Hiển thị thông báo thành công với thời gian
+                Swal.fire({
+                    title: "Đã nộp bài!",
+                    text: "Bài làm của bạn đã được nộp.",
+                    icon: "success",
+                    timer: 2000, // Thời gian hiển thị thông báo thành công (1500 ms = 1.5 giây)
+                    timerProgressBar: true,
+                    didClose: () => {
+                        // Sau khi thông báo thành công bị đóng, nộp form
+                        document.getElementById('tracNghiemForm').submit();
+                    }
+                });
+            }
+        });
     }
 </script>
 
