--- a/ToeicWeb/Views/Shared/_Layout.cshtml
+++ b/ToeicWeb/Views/Shared/_Layout.cshtml
@@ -38,6 +38,9 @@
             &copy; 2024 - ToeicWeb - <a asp-area="" asp-controller="Home" asp-action="Privacy">Contact</a>
         </div>
     </footer> *@
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
