--- a/ToeicWeb/Areas/Customer/Views/Luyentap/PracticePart5.cshtml
+++ b/ToeicWeb/Areas/Customer/Views/Luyentap/PracticePart5.cshtml
@@ -3,7 +3,6 @@
 <!-- Tiêu đề -->
 <div class="col-12 text-center">
     <h2>@Model.BaiTap.Tieu_de</h2>
-    @* <button class="btn btn-secondary">Thoát</button> *@
 </div>
 <div class="container rounded-4" style="max-width: 1220px;box-shadow: 0 2px 4px rgba(0, 0, 0, .08), 0 4px 12px rgba(0, 0, 0, .08);margin-left: -6rem;">
     <div class="row">
@@ -17,7 +16,9 @@
         <!-- Phần bài làm (câu hỏi) bên trái -->
         <div class="col-md-8">
             <!-- Form câu   ỏi -->
-            <form asp-action="ResultPart5" method="post" id="tracNghiemForm">
+            <form asp-action="ResultDetailPart5" method="post" id="tracNghiemForm">
+                <input type="hidden" name="baiTapId" value="@Model.BaiTap.Id" />
+
                 @for (int i = 0; i < Model.CauHoiList.Count; i++)
                 {
                     <div class="question-block" id="question_@Model.CauHoiList[i].Id" style="padding: 10px; margin-bottom: 30px;">
@@ -33,7 +34,6 @@
                     };
                         }
 
-                        @* Hiển thị các đáp án với ký hiệu *@
                         @for (int j = 0; j < options.Length; j++)
                         {
                             <div>
@@ -42,11 +42,14 @@
                             </div>
                         }
 
-                        @* Input ẩn để đánh dấu câu hỏi đã được hiển thị *@
+                        <!-- Input to send question Ids -->
                         <input type="hidden" name="questionIds" value="@Model.CauHoiList[i].Id" />
                     </div>
                 }
+
+
             </form>
+
 
         </div>
     </div>
