--- a/ToeicWeb/Areas/Customer/Views/Home/Index.cshtml
+++ b/ToeicWeb/Areas/Customer/Views/Home/Index.cshtml
@@ -161,8 +161,7 @@
                     </div>
 
                     <div>
-                        <a asp-action="Details"
-                           asp-route-productId="Id"
+                        <a asp-are="Customer" asp-controller="Luyentap" asp-action="Part6"
                            class="btn btn-primary bg-gradient  form-control">
                             Luyện tập
                         </a>
@@ -189,8 +188,7 @@
                     </div>
 
                     <div>
-                        <a asp-action="Details"
-                           asp-route-productId="Id"
+                        <a asp-are="Customer" asp-controller="Luyentap" asp-action="Part7"
                            class="btn btn-primary bg-gradient  form-control">
                             Luyện tập
                         </a>
