--- a/ToeicWeb/Views/Shared/_NavbarBack.cshtml
+++ b/ToeicWeb/Views/Shared/_NavbarBack.cshtml
@@ -5,8 +5,9 @@
                 <li class="nav-item m-sm-2 fs-6 text-light d-sm-flex">
                     <a class="nav-link" href="javascript:history.back()">
                         <i class="bi bi-chevron-left pe-sm-3"></i>
+                        <span class="mt-sm-1">Trở lại</span>
+
                     </a>
-                    <span class="mt-sm-1">Back</span>
                 </li>
             </ul>
         </div>
