--- a/ToeicWeb/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ToeicWeb/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -267,7 +267,7 @@
 							</a>
 							<!--end:Menu item-->
 							<!--begin:Menu item-->
-							<a data-kt-menu-trigger="click" class="menu-item here show menu-accordion">
+							<a asp-area="Admin" asp-controller="BTnge" asp-action="Index" class="menu-item here show menu-accordion">
 								<!--begin:Menu link-->
 								<span class="menu-link">
 									<span class="menu-icon">
