--- a/ToeicWeb/Areas/Admin/Views/BTnge/Index.cshtml
+++ b/ToeicWeb/Areas/Admin/Views/BTnge/Index.cshtml
@@ -82,7 +82,7 @@
                     <label for="NewImageFile" class="d-flex align-items-center fs-5 fw-semibold mb-2">
                         <span class="required">Chọn nhiều ảnh</span>
                     </label>
-                    <input type="file" class="form-control" id="NewImageFile" accept="image/*" multiple />
+                    <input type="file" class="form-control" id="NewImageFile" name="ImageFile" accept="image/*" multiple />
                     <span id="ImageFileError" class="text-danger"></span>
                 </div>
 
@@ -91,7 +91,7 @@
                     <label for="NewAudioFile" class="d-flex align-items-center fs-5 fw-semibold mb-2">
                         <span class="required">Chọn nhiều file âm thanh</span>
                     </label>
-                    <input type="file" class="form-control" id="NewAudioFile" accept="audio/*" multiple />
+                    <input type="file" class="form-control" id="NewAudioFile" name="AudioFile" accept="audio/*" multiple />
                     <span id="AudioFileError" class="text-danger"></span>
                 </div>
             </div>
