--- a/ToeicWeb/Areas/Customer/Views/Luyentap/ResultDetailPart1.cshtml
+++ b/ToeicWeb/Areas/Customer/Views/Luyentap/ResultDetailPart1.cshtml
@@ -48,7 +48,7 @@
                         </div>
                         <div class="explanation-content mt-2" id="transcript_@question.Id">
                             <div>
-                                @question.Cau_hoi
+                                @question.Transcript
                             </div>
                         </div>
                     </div>
